5.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-front
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    name: nginx
