7.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-front
#  annotations:
#    kubernetes.io/ingress.class: nginx
##    kubernetes.io/tls-acme: "true"
#    ingress.annotations.external-dns.alpha.kubernetes.io/target: "ingress.eu-central-1.ms.cloudposse.org"
spec:
  rules:
  - host: {}.eu-central-1.ms.cloudposse.org
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-front
          servicePort: 80
#  tls:
#  - secretName: {}-tls
#    hosts:
#    - {}.eu-central-1.ms.cloudposse.org
#    - {}.eu-central-1.ms.cloudposse.org
